# qwen-tts

./: .gitignore  README.md  main.py  pyproject.toml
extension/: content.css  content.js  generate_icons.py  manifest.json  popup.css  popup.html  popup.js
static/: script.js  style.css
